# switchboard-plug-wacom

./: .gitignore  .travis.yml  README.md  meson.build
.github/workflows/: githubci.yml
data/: io.elementary.switchboard.wacom.appdata.xml.in  meson.build  wacom.metainfo.xml.in
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+165 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
src/: MainPage.vala  Plug.vala  Utils.vala  meson.build
src/Backend/: Device.vala  DeviceManager.vala  DeviceManagerWayland.vala  DeviceManagerX11.vala  WacomDevice.vala  WacomTool.vala  WacomToolMap.vala
src/Views/: StylusView.vala  TabletView.vala
src/Widgets/: DrawingArea.vala  SettingLabel.vala
vapi/: gdk-wayland-3.0.vapi  libwacom.vapi  xi.vapi
